Fix: fixed header z-index

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -375,7 +375,7 @@ footer {
     }
 
     header {
-        z-index: 1;
+        z-index: 99;
         position: fixed;
         top: 0;
         height: 30px;
